bin_PROGRAMS = CaculliTyranowski

CaculliTyranowski_SOURCES = CaculliTyranowski.c

CaculliTyranowski_CFLAGS =
CaculliTyranowski_CFLAGS += -W
CaculliTyranowski_CFLAGS += -Wall
CaculliTyranowski_CFLAGS += -Wextra
#CaculliTyranowski_CFLAGS += -Werror
CaculliTyranowski_CFLAGS += -ansi
CaculliTyranowski_CFLAGS += -pipe
