AC_PREREQ([2.69])

AC_INIT([CaculliTyranowski], [1.0], [la196672@student.helha.be], [https://connected.helha.be/course/view.php?id=26918])

AM_INIT_AUTOMAKE([subdir-objects foreign -Wall -Werror 1.16])

AC_USE_SYSTEM_EXTENSIONS

AC_PROG_CC([cc clang gcc])

AC_PROG_RANLIB

AM_PROG_AR

AC_CONFIG_HEADERS([config.h])

AC_CONFIG_FILES([
    Makefile
])

AC_CONFIG_LINKS([
    CaculliTyranowskiFormation.dat:CaculliTyranowskiFormation.dat
    CaculliTyranowskiPersonne.dat:CaculliTyranowskiPersonne.dat
])

AC_OUTPUT
